[package]
name = "dgg-phrases"
version = "0.1.0"
authors = ["vyneer <vyneer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tungstenite = "0.11"
url = "2.1"
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "2.33.3", features = ["yaml"] }
postgres = "0.19"
rust_decimal = { version = "1.12", features = ["db-postgres"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }

[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
