[package]
name = "dgg-phrases"
version = "0.1.0"
authors = ["vyneer <vyneer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio-postgres = "0.7"
dotenv = "*"
rust_decimal = { version = "1.12", features = ["db-postgres"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "*"
futures-channel = "*"

[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 1  # Optimize for speed.